--- a/index.html
+++ b/index.html
@@ -8,7 +8,44 @@
       <link href="/src/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="bg-[black]"></header>
-    <script src="/index.js"></script>
+    <section  class="bg-[#1C1C1C] ">
+    <div class="container mx-auto px-[10px] py-[20px] flex justify-center items-center">
+    <header class="flex gap-[210px] py-[18px] border-b border-solid border-[#333333]" >
+      <div class="flex gap-[35px]">
+     <div class="flex items-center ">
+      <img src="/images/Logo (6).svg" alt="" >
+     </div>
+     <nav class="flex items-center">
+      <ul class="flex text-[white] gap-[30px]">
+        <li><a href="">Categories</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href=""></a>Help Center</li>
+      </ul>
+    </nav>
+  </div>
+  <div class="flex items-center gap-[24px] ">
+       <div>
+        <button class="text-[white]">+1 855 420 0000</button>
+       </div>
+       <img src="/public/images/circle.svg" alt="">
+       <div>
+       <button class="flex gap-[10px] text-[white] bg-[#299764] py-[18px] px-[30px] rounded-[100px]">Login <img src="/public/images/Login.svg" alt=""></button>
+       </div>
+     </div>
+    </header>
+</div>
+<div class="relative ">
+  <div class="container mx-auto px-[10px] py-[20px] flex flex-col justify-center items-center">
+    <div class="">
+      <img src="/public/images/home-image.png" alt="" class="max-w-[1035px] rounded-[15px] ">
+    </div>
+    <div class="absolute top-[70px] flex flex-col items-center justify-center text-[white]">
+      <h2 class="text-5xl text-[#fdfdfd]">Compact cars</h2>
+      <p>Rent cars as you are comfortable and where you are comfortable.</p>
+    </div>
+  </div>
+</div>
+<script src="/index.js"></script>
+</section>
   </body>
 </html>
